--- a/config/database.yml
+++ b/config/database.yml
@@ -4,14 +4,18 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: mysql2
-  database: railslog
-  encoding: utf8
-  reconnect: false
+ # adapter: mysql2
+ # database: railslog
+ # encoding: utf8
+ # reconnect: false
+ # pool: 5
+ # host: localhost
+ # username: root
+ # password: 
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  host: localhost
-  username: root
-  password: 
+  timeout: 5000
 
 
 # Warning: The database defined as "test" will be erased and
